--- a/ProjectDotNET.csproj
+++ b/ProjectDotNET.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFrameworkCore.Triggered.Abstractions" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
       <PrivateAssets>all</PrivateAssets>
